--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://github.com/jeromelachaud/freelancer-theme
 description: "Fruit Isles landing page."
 keywords: "your keywords, separated by commas"
 skills: "A 2D Task Management based Platformer-Tycoon Game"
-meta_author: LastName FirstName
+meta_author: Taylor Tee
 
 # Google webmaster tools
 google_verify:
