--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Fruit Isles Task Tycoon
+title: Fruit Isles Tycoon
 email: taneataylor1@gmail.com
 url: https://github.com/jeromelachaud/freelancer-theme
 description: "Fruit Isles landing page."
